# openlibrary-rs

./: Cargo.toml  README.md
examples/: example_authors.rs  example_books.rs  example_books_generic.rs  example_search.rs
src/: authors.rs  books.rs  goodreads.rs  lib.rs  main.rs  search.rs  subject.rs
src/search/: book.rs  query.rs
src/search/resources/: goodreads_search_test.html
