[package]
name = "metagetta"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.11", features = ["blocking", "json"] }
serde = "1.0.140"
serde_derive = "1.0.140"
serde_json = "1.0.82"

[dev-dependencies]
mockito = "0.31.0"
