[package]
name = "openlibrary-rs"
version = "0.2.0"
edition = "2021"
license = "GPL-3.0"
description = "A wrapper around openlibrary's Web API."
categories = ["api-bindings"]
keywords = ["Openlibrary", "books", "ebooks"]
repository = "https://github.com/MrBeeMovie/openlibrary-rs"
readme = "./README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_builder = "0.11.2"
reqwest = { version = "0.11.11", features = ["blocking", "json"] }
serde = "1.0.140"
serde_derive = "1.0.140"
serde_json = "1.0.82"

[dev-dependencies]
mockito = "0.31.0"
